[gd_scene load_steps=4 format=3 uid="uid://blehuc240pu7n"]

[ext_resource type="Script" path="res://Scenes/UI/start_screen_ui.gd" id="1_d725p"]

[sub_resource type="Animation" id="Animation_m26jm"]
resource_name = "FadeToBlack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mokyh"]
_data = {
"FadeToBlack": SubResource("Animation_m26jm")
}

[node name="StartScreenUI" type="CanvasLayer"]
script = ExtResource("1_d725p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.26
anchor_top = 0.55
anchor_right = 0.26
anchor_bottom = 0.6
offset_right = 40.0
offset_bottom = 40.0

[node name="StartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Demo" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Demo"

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer"]
libraries = {
"": SubResource("AnimationLibrary_mokyh")
}

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Demo" to="." method="_on_demo_pressed"]
